apps/podinfo/traffic-split.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-stable
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: podinfo-blue
